
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int
calculate_precision (unsigned int addr_byte, int already_written_init)
{
 static int already_written = 0;
 int tmp;

 if (!already_written)
  already_written = already_written_init;

 while (addr_byte < already_written)
  addr_byte += 0x100;

 tmp = addr_byte - already_written;
 already_written = addr_byte;
 return tmp;
}
